porfolio section complete

--- a/main/project/index.html
+++ b/main/project/index.html
@@ -25,7 +25,7 @@
     <!-- main page section start -->
 
     <main
-        class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 :max-w-[90%] h-svh after:h-full overflow-hidden lg">
+        class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 lg:max-w-[90%] h-svh after:h-full overflow-hidden ">
 
         <div class="relative z-50 flex justify-center items-center my-auto">
             <img src="./image/person_1.jpg" alt="profile image"
@@ -378,44 +378,160 @@
 
     <div class="h-svh">
         <div
-            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
             <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px]">
                 MY <span class="text-yellow-400">PORTFOLIO</span>
             </div>
         </div>
 
-        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 mx-10 sm:mx-20 my-10">
+        <!-- Project section -->
+
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mx-10 sm:mx-20 my-10">
+
+            <!-- Plant components -->
+
             <a href="../components/A_fullscreen_hero_section/plant.html">
 
                 <div
-                    class="relative   before:absolute before:content-['Plant'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+                    class="relative   before:absolute before:content-['Plant'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
 
                     <img src="image/ss/plant.png" alt="" class="object-cover ">
 
                 </div>
             </a>
 
+            <!-- Computer components -->
+
             <a href="../components/background/hero_section.html">
 
                 <div
-                    class="relative   before:absolute before:content-['Computer'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+                    class="relative   before:absolute before:content-['Computer'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
 
-                    <img src="image/ss/computer_.png" alt="" class="object-cover ">
+                    <img src="image/ss/computer.png" alt="" class="object-cover ">
 
                 </div>
             </a>
 
+            <!-- Call_to_Action components -->
+
             <a href="../components/call_to_action_section/call_to_action.html">
 
                 <div
-                    class="relative   before:absolute before:content-['Call_to_Action'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+                    class="relative   before:absolute before:content-['Call_to_Action'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
 
                     <img src="image/ss/calltoaction.png" alt="" class="object-cover ">
 
                 </div>
             </a>
 
+            <!-- grid of post components -->
+
+            <a href="../components/card_grid_for_post/card_grid.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Grid_of_Post'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/grid.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- Cards components -->
+
+            <a href="../components/cards/card.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Card'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/cards.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- FAQ Components -->
+
+            <a href="../components/FAQ_demo/FAQ.html">
+
+                <div
+                    class="relative   before:absolute before:content-['F.A.Q'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/FAQ.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- File Upload Components -->
+
+            <a href="../components/file_upload_form/file.html">
+
+                <div
+                    class="relative   before:absolute before:content-['File_Upload'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/file_upload.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- Footer Components -->
+
+            <a href="../components/footer/footer.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Footer'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/footer.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- Image Gallery Components -->
+
+            <a href="../components/gallery/image_gallery.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Image_Gallery'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/gallery.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- product page Components -->
+
+            <a href="../components/Product_page_cloth/cloth.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Cloth'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/product.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- Watch components -->
+
+            <a href="../components/product_page_watch/product.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Watch'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/watch.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <!-- Regstration Components -->
+
+            <a href="../components/responsive_registration_form/registration.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Registration'] before:flex before:justify-center before:items-center before:font-bold before:text-white before:text-xl before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/registration.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
 
 
         </div>
