--- a/main/project/index.html
+++ b/main/project/index.html
@@ -376,7 +376,7 @@
 
     <!-- Portfolio Section start -->
 
-    <div class="h-svh">
+    <div class="">
         <div
             class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
@@ -387,14 +387,14 @@
 
         <!-- Project section -->
 
-        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mx-10 sm:mx-20 my-10">
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mx-10 sm:mx-20 my-20">
 
             <!-- Plant components -->
 
             <a href="../components/A_fullscreen_hero_section/plant.html">
 
                 <div
-                    class="relative   before:absolute before:content-['Plant'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+                    class="relative before:absolute before:content-['Plant'] before:flex before:justify-center before:items-center before:h-full before:w-full before:font-bold before:text-white before:text-xl before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
 
                     <img src="image/ss/plant.png" alt="" class="object-cover ">
 
@@ -538,6 +538,76 @@
 
     </div>
     <!-- Portfolio Section End -->
+
+    <hr class="m-auto w-1/2" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
+  height: 1px;">
+
+    <!-- contact section start  -->
+
+    <div class="h-screen">
+
+        <!-- contact -->
+        <div
+            class="relative uppercase flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            contact
+            <div class=" md:top-0 absolute text-white text-xl md:text-5xl lg:text-[50px]">
+                get in <span class="text-yellow-400">touch</span>
+            </div>
+        </div>
+
+        <!-- main contact section -->
+        <div class="grid lg:grid-cols-[30%_70%] grid-cols-1 mx-20 gap-10">
+
+            <!-- contact detail section -->
+
+            <!-- first saection -->
+
+            <div class="flex flex-col gap-4 ">
+                <p class="uppercase text-xl font-bold text-white">don't be shy !</p>
+                <p class="text-white">Feel free to get in touch with me. I am always open to discussing new projects,
+                    creative ideas or
+                    opportunities to be part of your visions.</p>
+
+                <div class="flex ">
+                    <span class="relative -left-4 overflow-hidden ml-4">
+                        <i class="ri-mail-open-fill text-3xl text-yellow-400 "></i>
+                    </span>
+                    <div>
+                        <p class="uppercase text-white  text-sm text-opacity-80 ">mail me</p>
+                        <p class="text-pretty text-white  font-bold">steve@mail.com</p>
+                    </div>
+                </div>
+
+                <div class="flex ">
+                    <span class="relative -left-4 overflow-hidden ml-4">
+                        <i class="ri-phone-fill text-3xl bg-yellow-400 rounded-md"></i>
+                    </span>
+                    <div>
+                        <p class="uppercase text-white  text-sm text-opacity-80 ">call me</p>
+                        <p class="text-pretty text-white  font-bold">+91 12345 67890</p>
+                    </div>
+                </div>
+
+                <div>
+                    <i
+                        class="ri-facebook-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+
+                    <i
+                        class="ri-twitter-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+
+                    <!-- youtube icon set karvano chhe , peli site mathi -->
+                    <i class="ri-dribbble-fill"></i>
+                </div>
+            </div>
+
+            <!-- second saection -->
+
+            <div class=" ">
+
+            </div>
+        </div>
+
+        <!-- contact section end  -->
 </body>
 
 </html>
