--- a/main/project/index.html
+++ b/main/project/index.html
@@ -606,8 +606,9 @@
 
             </div>
         </div>
+    </div>
 
-        <!-- contact section end  -->
+    <!-- contact section end  -->
 </body>
 
 </html>
