contact page complete

--- a/main/project/index.html
+++ b/main/project/index.html
@@ -376,7 +376,7 @@
 
     <!-- Portfolio Section start -->
 
-    <div class="">
+    <div class="mx-[7%]">
         <div
             class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
@@ -544,7 +544,7 @@
 
     <!-- contact section start  -->
 
-    <div class="h-screen">
+    <div class=" lg:mx-[7%] m-auto mb-4">
 
         <!-- contact -->
         <div
@@ -556,21 +556,21 @@
         </div>
 
         <!-- main contact section -->
-        <div class="grid lg:grid-cols-[30%_70%] grid-cols-1 mx-20 gap-10">
+        <div class="grid lg:grid-cols-[35%_65%] grid-cols-1 mx-4 md:mx-20 gap-10">
 
             <!-- contact detail section -->
 
             <!-- first saection -->
 
-            <div class="flex flex-col gap-4 ">
-                <p class="uppercase text-xl font-bold text-white">don't be shy !</p>
+            <div class="flex flex-col gap-6 px-4">
+                <p class="uppercase text-xl md:text-3xl font-bold text-white">don't be shy !</p>
                 <p class="text-white">Feel free to get in touch with me. I am always open to discussing new projects,
                     creative ideas or
                     opportunities to be part of your visions.</p>
 
                 <div class="flex ">
-                    <span class="relative -left-4 overflow-hidden ml-4">
-                        <i class="ri-mail-open-fill text-3xl text-yellow-400 "></i>
+                    <span class="relative -left-2 sm:-left-4 overflow-hidden ml-2 sm:ml-4">
+                        <i class="ri-mail-open-fill text-2xl sm:text-3xl text-yellow-400 "></i>
                     </span>
                     <div>
                         <p class="uppercase text-white  text-sm text-opacity-80 ">mail me</p>
@@ -579,12 +579,12 @@
                 </div>
 
                 <div class="flex ">
-                    <span class="relative -left-4 overflow-hidden ml-4">
-                        <i class="ri-phone-fill text-3xl bg-yellow-400 rounded-md"></i>
+                    <span class="relative -left-2 sm:-left-4 overflow-hidden ml-2 sm:ml-4">
+                        <i class="ri-phone-fill text-2xl sm:text-3xl bg-yellow-400 rounded-md"></i>
                     </span>
                     <div>
                         <p class="uppercase text-white  text-sm text-opacity-80 ">call me</p>
-                        <p class="text-pretty text-white  font-bold">+91 12345 67890</p>
+                        <p class="text-sm  text-white  font-bold">+91 12345 67890</p>
                     </div>
                 </div>
 
@@ -595,20 +595,71 @@
                     <i
                         class="ri-twitter-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
 
-                    <!-- youtube icon set karvano chhe , peli site mathi -->
-                    <i class="ri-dribbble-fill"></i>
+
+                    <i
+                        class="ri-youtube-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+
+                    <i
+                        class="ri-instagram-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
                 </div>
             </div>
 
             <!-- second saection -->
 
             <div class=" ">
+                <form action="" class="flex flex-col gap-8  ">
+                    <div class="flex justify-between flex-col md:flex-row gap-4">
 
+                        <input type="text" placeholder="YOUR NAME"
+                            class="bg-gray-800 w-full text-sm text-white h-12  py-2 rounded-full px-6 focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-yellow-400 focus:duration-700">
+
+                        <input type="text" placeholder="YOUR EMAIL"
+                            class="bg-gray-800 text-sm w-full text-white h-12  py-2 rounded-full px-6  focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-yellow-400 focus:duration-700">
+
+                        <input type="text" placeholder="YOUR SUBJECT"
+                            class="bg-gray-800 text-sm w-full text-white h-12  py-2 rounded-full px-6  focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-yellow-400 focus:duration-700">
+
+                    </div>
+                    <textarea name="message" id="messag" placeholder="your message" cols="100" rows="7"
+                        class="bg-gray-800 rounded-3xl w-full text-white focus:outline-0 focus:ring-2 focus:ring-inset focus:ring-yellow-400 focus:duration-700">
+                    </textarea>
+
+                </form>
+
+                <div class="w-fit my-4">
+
+                    <div
+                        class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 border-yellow-400 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
+                        <a href=""
+                            class="relative uppercase z-50 px-6 py-4 font-bold text-sm text-white lg:text-sm">send
+                            message</a>
+
+                        <i
+                            class="inline-block relative ri-send-plane-fill z-50 bg-yellow-400 px-4 py-3 rounded-full text-sm text-white lg:text-lg"></i>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
 
     <!-- contact section end  -->
+
+    <hr class="m-auto w-1/2" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
+  height: 1px;">
+
+    <!-- Blog section start -->
+
+    <div
+        class="relative uppercase flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+        posts
+        <div class=" md:top-0 absolute text-white text-xl md:text-5xl lg:text-[50px]">
+            my <span class="text-yellow-400">blog</span>
+        </div>
+    </div>
+
+    <!-- Blog section end -->
+
 </body>
 
 </html>
