--- a/main/project/index.html
+++ b/main/project/index.html
@@ -73,13 +73,21 @@
 
         </main>
 
-        <div class="flex flex-col text-2xl fixed right-10 justify-center items-center h-full gap-6">
 
-            <a href="#home"> <i class="ri-home-gear-fill bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-            <a href="#about"><i class="ri-user-3-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-            <a href="#portfolio"><i class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-            <a href="#contact"><i class="ri-mail-open-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-            <a href="#blog"><i class="ri-chat-1-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+        <!-- <div>
+            <button data-collapse-toggle=""><i class="ri-menu-fill"></i></button>
+        </div> -->
+
+        <div class="" id="nav">
+
+            <div class="flex flex-col text-2xl fixed right-0 md:right-2 justify-center items-center h-full gap-6">
+
+                <a href="#home"> <i class="ri-home-gear-fill bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+                <a href="#about"><i class="ri-user-3-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+                <a href="#portfolio"><i class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+                <a href="#contact"><i class="ri-mail-open-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+                <a href="#blog"><i class="ri-chat-1-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+            </div>
         </div>
     </div>
     <!-- main page section end -->
@@ -392,11 +400,11 @@
 
     <!-- Portfolio Section start -->
 
-    <div class="mx-[7%]" id="Portfolio">
+    <div class="mx-[7%]" id="portfolio">
         <div
             class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
-            <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px]">
+            <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px] ">
                 MY <span class="text-yellow-400">PORTFOLIO</span>
             </div>
         </div>
