--- a/main/project/index.html
+++ b/main/project/index.html
@@ -32,14 +32,12 @@
             class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 lg:max-w-[90%] h-svh after:h-full overflow-hidden ">
 
             <div class="relative z-50 flex justify-center items-center my-auto">
-                <img src="./image/person_1.jpg" alt="profile image"
+                <img src="./image/person_.jpg" alt="profile image"
                     class="lg:ml-10 rounded-full lg:rounded-md lg:w-[80%] h-[200px] lg:h-[calc(100vh-90px)] aspect-square object-cover">
             </div>
 
-
             <div class="z-10 flex flex-col justify-center items-center lg:items-start gap-4 md:font-sans">
                 <div>
-
 
                     <p
                         class="relative before:top-6 before:-left-20 before:absolute before:content-[''] max-xl:before:hidden before:bg-yellow-400 mb-2 xl:ml-20 before:rounded-xl before:w-1/12 before:h-2 font-bold text-3xl text-nowrap text-yellow-400 md:text-4xl lg:text-5xl">
@@ -47,7 +45,6 @@
                         CHETAN DAVRA.</p>
                     <p class="m-auto md:m-0 xl:ml-20 w-fit font-bold text-3xl text-white md:text-4xl lg:text-5xl">WEB
                         DESIGNER</p>
-
 
                 </div>
 
@@ -69,10 +66,7 @@
                 </div>
             </div>
 
-
-
         </main>
-
 
         <!-- <div>
             <button data-collapse-toggle=""><i class="ri-menu-fill"></i></button>
@@ -80,13 +74,18 @@
 
         <div class="" id="nav">
 
-            <div class="flex flex-col text-2xl fixed right-0 md:right-2 justify-center items-center h-full gap-6">
+            <div class="flex flex-col text-2xl fixed right-6  justify-center items-center  h-full gap-6">
 
-                <a href="#home"> <i class="ri-home-gear-fill bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-                <a href="#about"><i class="ri-user-3-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-                <a href="#portfolio"><i class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-                <a href="#contact"><i class="ri-mail-open-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
-                <a href="#blog"><i class="ri-chat-1-fill  bg-yellow-400 rounded-full p-2 text-2xl"></i></a>
+                <a href="#home"> <i
+                        class="ri-home-gear-fill bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
+                <a href="#about"><i
+                        class="ri-user-3-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
+                <a href="#portfolio"><i
+                        class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
+                <a href="#contact"><i
+                        class="ri-mail-open-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
+                <a href="#blog"><i
+                        class="ri-chat-1-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
             </div>
         </div>
     </div>
@@ -100,7 +99,7 @@
         <!-- resume text section start -->
 
         <div
-            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             RESUME
             <div class=" md:top-0 absolute text-white text-xl md:text-5xl lg:text-[50px]">
                 ABOUT <span class="text-yellow-400">ME</span>
@@ -396,13 +395,13 @@
     <!-- About Section end -->
 
     <hr class="m-auto w-1/2" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
-  height: 1px;">
+  height:1px;">
 
     <!-- Portfolio Section start -->
 
-    <div class="mx-[7%]" id="portfolio">
+    <div class="m-auto  w-[90%]" id="portfolio">
         <div
-            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
             <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px] ">
                 MY <span class="text-yellow-400">PORTFOLIO</span>
@@ -572,7 +571,7 @@
 
         <!-- contact -->
         <div
-            class="relative uppercase flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative uppercase flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             contact
             <div class=" md:top-0 absolute text-white text-xl md:text-5xl lg:text-[50px]">
                 get in <span class="text-yellow-400">touch</span>
