--- a/main/project/index.html
+++ b/main/project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8">
@@ -23,6 +23,8 @@
     <!-- font awesome icon -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css">
+
+
 </head>
 
 <body class="bg-slate-900">
@@ -32,7 +34,7 @@
             class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 lg:max-w-[90%] h-svh after:h-full overflow-hidden ">
 
             <div class="relative z-50 flex justify-center items-center my-auto">
-                <img src="./image/person_.jpg" alt="profile image"
+                <img src="./image/person_1.jpg" alt="profile image"
                     class="lg:ml-10 rounded-full lg:rounded-md lg:w-[80%] h-[200px] lg:h-[calc(100vh-90px)] aspect-square object-cover">
             </div>
 
@@ -69,12 +71,14 @@
         </main>
 
         <!-- <div>
-            <button data-collapse-toggle=""><i class="ri-menu-fill"></i></button>
+            <button type="button" data-collapse-toggle=""><i class="ri-menu-fill"></i>
+
+            </button>
         </div> -->
 
         <div class="" id="nav">
 
-            <div class="flex flex-col text-2xl fixed right-6  justify-center items-center  h-full gap-6">
+            <div class="flex flex-col text-2xl fixed right-6  justify-center items-center  h-full gap-6 text-slate-900">
 
                 <a href="#home"> <i
                         class="ri-home-gear-fill bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
@@ -105,6 +109,8 @@
                 ABOUT <span class="text-yellow-400">ME</span>
             </div>
         </div>
+
+
         <!-- resume text section end -->
 
 
@@ -394,14 +400,15 @@
 
     <!-- About Section end -->
 
-    <hr class="m-auto w-1/2" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
+    <hr class="m-auto w-1/2 " style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
   height:1px;">
 
     <!-- Portfolio Section start -->
+    <div id="portfolio"></div>
+    <div class="m-auto w-[90%]">
 
-    <div class="m-auto  w-[90%]" id="portfolio">
         <div
-            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[10%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[8%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             WORKS
             <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px] ">
                 MY <span class="text-yellow-400">PORTFOLIO</span>
@@ -566,8 +573,8 @@
   height: 1px;">
 
     <!-- contact section start  -->
-
-    <div class=" lg:mx-[7%] m-auto mb-4" id="contact">
+    <div id="contact"></div>
+    <div class=" lg:mx-[7%] m-auto mb-10 lg:mb-[10%] ">
 
         <!-- contact -->
         <div
@@ -612,24 +619,29 @@
                 </div>
 
                 <div>
-                    <i
-                        class="ri-facebook-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                    <a href="">
+                        <i
+                            class="ri-facebook-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                    </a>
+                    <a href="">
+                        <i
+                            class="ri-twitter-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                    </a>
+                    <a href="">
 
-                    <i
-                        class="ri-twitter-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
-
-
-                    <i
-                        class="ri-youtube-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
-
-                    <i
-                        class="ri-instagram-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                        <i
+                            class="ri-youtube-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                    </a>
+                    <a href="">
+                        <i
+                            class="ri-instagram-fill text-xl rounded-full p-2 text-white bg-slate-700  hover:bg-yellow-400 duration-300"></i>
+                    </a>
                 </div>
             </div>
 
             <!-- second saection -->
 
-            <div class=" ">
+            <div class="flex flex-col gap-4 md:gap-8 ">
                 <form action="" class="flex flex-col gap-8  ">
                     <div class="flex justify-between flex-col md:flex-row gap-4">
 
@@ -649,7 +661,7 @@
 
                 </form>
 
-                <div class="w-fit my-4">
+                <div class="w-fit mt-6 ">
 
                     <div
                         class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 border-yellow-400 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
@@ -672,8 +684,8 @@
   height: 1px;">
 
     <!-- Blog section start -->
-
-    <div class="" id="blog">
+    <div id="blog"></div>
+    <div class="">
 
         <div
             class="relative uppercase flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[8%] w-full h-8 font-extrabold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
