--- a/main/project/index.html
+++ b/main/project/index.html
@@ -27,7 +27,12 @@
 
 </head>
 
-<body class="bg-slate-900">
+<body class="bg-slate-900 ">
+    <!-- 
+    <a href="" class="dark:open:select-all">
+        <i class="ri-sun-fill"></i>
+        <i class="ri-moon-fill  bg-black dark:bg-white"></i>
+    </a> -->
     <!-- main page section start -->
     <div class="grid grid-cols-[90%_10%]" id="home">
         <main
