--- a/main/project/index.html
+++ b/main/project/index.html
@@ -39,7 +39,7 @@
             class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 lg:max-w-[90%] h-svh after:h-full overflow-hidden ">
 
             <div class="relative z-50 flex justify-center items-center my-auto">
-                <img src="./image/person_1.jpg" alt="profile image"
+                <img src="./image/person_.jpg" alt="profile image"
                     class="lg:ml-10 rounded-full lg:rounded-md lg:w-[80%] h-[200px] lg:h-[calc(100vh-90px)] aspect-square object-cover">
             </div>
 
@@ -69,7 +69,7 @@
                     class="relative before:top-0 before:left-0 before:absolute before:content-[''] border-2 border-yellow-400 before:bg-yellow-400 rounded-full before:rounded-full before:w-full before:h-full before:translate-x-full hover:before:translate-x-0 before:duration-500 cursor-pointer overflow-hidden">
                     <a href="" class="relative z-50 px-4 py-4 font-bold text-sm text-white lg:text-lg">MORE ABOUTME</a>
                     <i
-                        class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full text-sm text-white lg:text-lg"></i>
+                        class="inline-block relative ri-arrow-right-line z-50 bg-yellow-400 px-4 py-3 rounded-full text-sm text-white lg:text-lg "></i>
                 </div>
             </div>
 
@@ -83,18 +83,35 @@
 
         <div class="" id="nav">
 
-            <div class="flex flex-col text-2xl fixed right-6  justify-center items-center  h-full gap-6 text-slate-900">
+            <div
+                class="flex flex-col text-2xl fixed -right-10  justify-center items-center  h-full w-[10%] gap-6 text-slate-900 pr-12">
 
-                <a href="#home"> <i
-                        class="ri-home-gear-fill bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
-                <a href="#about"><i
-                        class="ri-user-3-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
-                <a href="#portfolio"><i
-                        class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
-                <a href="#contact"><i
-                        class="ri-mail-open-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
-                <a href="#blog"><i
-                        class="ri-chat-1-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i></a>
+                <div class="w-[140px] overflow-hidden mr-24 rounded-full">
+                    <div
+                        class=" rounded-full  flex justify-end items-center relative before:absolute before:content-['portfolio'] before:h-full before:w-full right-0  before:left-0 before:text-lg before:flex before:justify-start before:items-center before:bg-yellow-400 before:pl-4 before:rounded-full before:text-white before:translate-x-full hover:before:translate-x-0 before:duration-500  ">
+
+                        <a href="#home" class="relative  p-1 inline-block bg-yellow-400 rounded-full">
+                            <i class="ri-home-gear-fill rounded-full p-1 md:p-2 text-xs md:text-2xl"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <a href="#about">
+                    <i class="ri-user-3-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i>
+                </a>
+
+                <a href="#portfolio">
+                    <i class="ri-briefcase-4-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i>
+                </a>
+
+                <a href="#contact">
+                    <i class="ri-mail-open-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i>
+                </a>
+
+                <a href="#blog">
+                    <i class="ri-chat-1-fill  bg-yellow-400 rounded-full p-1 md:p-2 text-xs md:text-2xl"></i>
+                </a>
+
             </div>
         </div>
     </div>
@@ -122,7 +139,7 @@
         <!-- personal Info section start -->
 
         <br>
-        <div class="m-[5%]">
+        <div class="m-[10%]">
 
             <div class="flex lg:flex-row flex-col justify-around items-center gap-4 my-8 font-bold text-slate-400">
 
